--- a/index.html
+++ b/index.html
@@ -6,19 +6,40 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- Content Slider core CSS -->
+    <link rel="stylesheet" href="https://www.jqueryscript.net/slider/">
+    <!-- Content Slider core Css -->
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <img src="Images/Universe.png" alt="Marvel Universe Image">
           <h1 class="display-4">Fluid jumbotron</h1>
           <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
         </div>
-      </div>
 
       <button id="search-button">Search</button>
     <script src="script.js"></script>
+
+    <section>
+      <ul id="lightSlider" class="gallery">
+        <li data-thumb="img/thumb/1.jpg"> <a href="#"> <img src="img/1.jpg" /> </a> </li>
+        <li data-thumb="img/thumb/2.jpg"> <a href="#"> <img src="img/2.jpg" /> </a> </li>
+        <li data-thumb="img/thumb/3.jpg"> <a href="#"> <img src="img/3.jpg" /> </a> </li>
+
+        </ul>
+
+    </section> 
+
 </body>
+
+<footer>
+      <!-- Content Slider jQuery library and jQuery lightSlider's javascript file -->
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="js/jquery.lightSlider.js"></script>
+</footer>
 </html>
