--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <img src="Images/Universe.png" alt="Marvel Universe Image">
-          <h1 class="display-4">Fluid jumbotron</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        </div>
-      </div>
-
-      <button id="search-button">Search</button>
-    <script src="script.js"></script>
+  <div class="container">
+  <img src="Images/Universe.png" alt="Marvel Universe Image">
+  <h1 class="display-4"></h1>
+  <button id="search-button">Search</button>
+  <script src="script.js"></script>
 </body>
 </html>
