--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </ul>
     </div>
 
-    <nav class="orbit-bullets">
+    <!-- <nav class="orbit-bullets"> -->
       <button class="is-active" data-slide="0"> 
         <!-- This button starts 1st -->
         <span class="show-for-sr">First slide details.</span>
@@ -82,7 +82,7 @@
       <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
       <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
       <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-    </nav>
+    <!-- </nav> -->
   </main>
 
 </section> 
