--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Compressed CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/motion-ui@1.2.3/dist/motion-ui.min.css" />
 </head>
 ​
 <body>
@@ -31,7 +32,7 @@
   <div class="card-divider">
     <h4 id="characterName">Character's Name</h4>
   </div>
-  <img src="assets/img/generic/rectangle-1.jpg">
+  <img src="https://via.placeholder.com/1200x600.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide">
   <div class="card-section">
     <p class="characterInfo">Character's information about themselves linked through api.</p>
   </div>
@@ -48,32 +49,32 @@
       <ul class="orbit-container">
         <li class="is-active orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="https://placehold.it/1200x600/999?text=Slide-1" alt="Space">
+            <img class="orbit-image" src="https://via.placeholder.com/1200x600.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide" alt="Space">
             <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="https://placehold.it/1200x600/888?text=Slide-2" alt="Space">
+            <img class="orbit-image" src="https://via.placeholder.com/1200x600.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide" alt="Space">
             <figcaption class="orbit-caption">Lets Rocket!</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="https://placehold.it/1200x600/777?text=Slide-3" alt="Space">
+            <img class="orbit-image" src="https://via.placeholder.com/1200x600.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide" alt="Space">
             <figcaption class="orbit-caption">Encapsulating</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="https://placehold.it/1200x600/666&text=Slide-4" alt="Space">
+            <img class="orbit-image" src="https://via.placeholder.com/1200x600.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide" alt="Space">
             <figcaption class="orbit-caption">Outta This World</figcaption>
           </figure>
         </li>
       </ul>
     </div>
 
-    <!-- <nav class="orbit-bullets"> -->
+    <nav class="orbit-bullets">
       <button class="is-active" data-slide="0"> 
         <!-- This button starts 1st -->
         <span class="show-for-sr">First slide details.</span>
@@ -82,11 +83,13 @@
       <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
       <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
       <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
-    <!-- </nav> -->
+    </nav>
   </main>
 
 </section> 
-​
+
+
+  <script src ="content-slider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script src="js/vendor/what-input.js"></script>
   <!-- Compressed JavaScript -->
