--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     <p class="characterInfo">Character's information about themselves linked through api.</p>
   </div>
 </div>
+<!-- section for colors -->
+
+
+
+
+<!-- section for carousel -->
 <section>
   <main class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
     <div class="orbit-wrapper">
@@ -92,7 +98,7 @@
   <script src ="content-slider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <!-- <script src="js/vendor/what-input.js"></script> -->
-  
+
   <!-- Compressed JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
   <script>$(document).foundation();</script>
