--- a/index.html
+++ b/index.html
@@ -13,31 +13,97 @@
 </head>
 ​
 <body>
-  <div class="container">
     <img src="Images/Universe.png" alt="Marvel Universe Image">
-  
-    <input type="text" placeholder="Use me, or don't" aria-describedby="exampleHelpTextNothing" data-abide-ignore>
-  </label>
-  <p class="help-text" id="exampleHelpTextNothing"></p>
-</div>
-<div class="cell small-12">
+<!-- Dropdown Option 1 -->
+<ul class="dropdown menu" data-dropdown-menu>
+  <li>
+    <a>Characters</a>
+    <ul class="menu">
+      <li>
+        <a href='#0'> Black-Widow</a>
+        <ul class="menu">
+          <li><a href='#0'>Movie 1</a></li>
+          <li><a href='#0'>Movie 2</a></li>
+          <li><a href='#0'>Movie 3</a></li>
+          <li><a href='#0'>Movie 4</a></li>
+        </ul>
+      </li>
 
-  <button class="button" type="button" data-toggle="example-dropdown">Toggle Dropdown</button>
-<div class="dropdown-pane" id="example-dropdown" data-dropdown>
-  Just some junk that needs to be said. Or not. Your choice.
-</div>
-<button type="button" id="search-button">Search</button>
+      <li>
+        <a href='#0'>Captain-America</a>
+        <ul class="menu">
+          <li><a href='#0'>Movie 1</a></li>
+          <li><a href='#0'>Movie 2</a></li>
+          <li><a href='#0'>Movie 3</a></li>
+          <li><a href='#0'>Movie 4</a></li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+  <li>
+</ul>
+<!-- Dropdown Option 2 -->
+<ul class="dropdown menu" data-dropdown-menu>
+  <li>
+    <a href="#">Characters</a>
+    <ul class="menu">
+      <li><a href="#">Black-Widow</a></li>
+      <li><a href="#">Captain-America</a></li>
+      <li><a href="#">Hulk</a></li>
+      <li><a href="#">Iron-Man</a></li>
+      <!-- ... -->
+    </ul>
+  </li>
 
+  <li>
+    <a href="#">Movies</a>
+    <ul class="menu">
+      <li><a href="#">Spider-Man: Far From Home</a></li>
+      <li><a href="#">Captain-America: Civil War</a></li>
+      <li><a href="#">The Incredible Hulk</a></li>
+      <li><a href="#">Iron-Man 2</a></li>
+      <!-- ... -->
+    </ul>
+  </li>
+
+  <li>
+    <a href="#">Comics</a>
+    <ul class="menu">
+      <li><a href="#">Deadpool</a></li>
+      <li><a href="#">Wolverine</a></li>
+      <li><a href="#">Loki</a></li>
+      <li><a href="#">Black Panther</a></li>
+      <!-- ... -->
+    </ul>
+  </li>
+</ul>
+<!--Search Bar-->
+<form action="">
+  <div class="input-group">
+    <input class="input-group-field" type="text">
+    <div class="input-group-button">
+      <input type="submit" class="button" id=searchButton value="Search">
+    </div>
+  </div>
+</form> 
+
+
+
+
+<div class="cell small-6">
+
+<div class="column">
 <div class="card" style="width: 250px; height: 300px;">
   <div class="card-divider">
     <h4 id="characterName">Character's Name</h4>
   </div>
-  <img src="https://via.placeholder.com/1200x600.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide">
+  <img src="https://via.placeholder.com/600x300.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide">
   <div class="card-section">
-    <p class="characterInfo">Character's information about themselves linked through api.</p>
+    <p class="characterInfo" >Character's information about themselves linked through api.</p>
   </div>
 </div>
-
+</div>
+</div>
 <!-- section for colors -->
 
 
