--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marvel Crossover</title>
   <!-- Compressed CSS -->
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/motion-ui@1.2.3/dist/motion-ui.min.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 ​
 <body>
@@ -82,11 +82,11 @@
 
   <li>
     <a href="#">Movies</a>
-    <ul class="menu">
-      <li><button href="#">Spider-Man: Far From Home</button></li>
-      <li><button href="#">Captain-America: Civil War</button></li>
-      <li><button href="#">The Incredible Hulk</button></li>
-      <li><button href="#">Iron-Man 2</button></li>
+    <ul class="menu" style="text-align: center;">
+      <li><button href="#">Captain-America: The First Avenger</button></li>
+      <li><button href="#">Captain Marvel</button></li>
+      <li><button href="#">Iron Man</button></li>
+      <li><button href="#">Iron Man 2</button></li>
       <!--Add extra movies below -->
     </ul>
   </li>
@@ -128,7 +128,7 @@
       <div class="cell">
         <div class="card">
           <div class="card-section">
-            <h4 style="font-family: 'Bangers', cursive; color: yellow;">Iron-Man/Movies they were in</h4>
+            <h4 style="font-family: 'Bangers', cursive;">Iron-Man/Movies they were in</h4>
           <img class="cardImage" src="https://via.placeholder.com/550x550">
             <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -138,7 +138,7 @@
         <div class="cell">
           <div class="card">
             <div class="card-section">
-              <h4 style="font-family: 'Bangers', cursive; color: #1779ba;">Iron-Man/Comic book series</h4>
+              <h4 style="font-family: 'Bangers', cursive;">Iron-Man/Comic book series</h4>
             <img class="cardImage" src="https://via.placeholder.com/550x550">
               <p class="pCards">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
@@ -148,7 +148,7 @@
           <div class="cell">
             <div class="card">
               <div class="card-section">
-                <h4 class="test" style="font-family: 'Bangers', cursive; color: #008000; ">Iron-Man/Movies they were in</h4>
+                <h4 class="test" style="font-family: 'Bangers', cursive;">Iron-Man/Movies they were in</h4>
               <img class="cardImage" src="https://via.placeholder.com/550x550">
                 <p class="pCards test">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
