create search bar id then  link button press and area.val().trim() to make a call to the marvel api that console logs some basic info of entered hero name

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!--Search Bar-->
   <form class="searchBar" autocomplete="on">
   <div class="input-group">
-    <input class="input-group-field" type="text" autocomplete="off">
+    <input class="input-group-field" type="text" autocomplete="off" id="searchBarField">
     <div class="input-group-button">
       <button type="submit" class="button float-right" id=searchButton value="Search">Search</button>
     </div>
