--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <!--Cards Section-->
 
 <div class="grid-container">
-  <div class="grid-x grid-margin-x small-up-2 medium-up-3">
+  <div id="cardAttach" class="grid-x grid-margin-x small-up-2 medium-up-3">
     <div class="cell">
       <div class="card">
         <div class="card-section">
@@ -186,7 +186,7 @@
 </div>
 </div>
 
-  <script src ="content-slider.js"></script>
+  <!-- <script src ="content-slider.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <!-- <script src="js/vendor/what-input.js"></script> -->
 
