attempt to add char bios

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
   <img id="bioPic" src="https://via.placeholder.com/1200x600.png?text=Visit+WhoIsHostingThis.com+Buyers+Guide">
   <div class="card-section">
-    <p class="characterInfo">Character's information about themselves linked through api.</p>
+    <p id="characterInfo">Character's information about themselves linked through api.</p>
   </div>
 </div>
 <!-- section for colors -->
