--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 <body>
   <div class="container">
     <img src="Images/Universe.png" alt="Marvel Universe Image">
-  
     <input type="text" id="charSearch" placeholder="Use me, or don't" aria-describedby="exampleHelpTextNothing" data-abide-ignore>
   </label>
+  <input type="text" id="movieInput" placeholder="Search for Movies" aria-describedby="exampleHelpTextNothing" data-abide-ignore>
+</label>
   <p class="help-text" id="exampleHelpTextNothing"></p>
 </div>
 <div class="cell small-12">
 
-  <button class="button" type="button" data-toggle="example-dropdown">Toggle Dropdown</button>
+
+  <button class="button" type="button" data-toggle="example-dropdown">Movie Dropdown</button>
 <div class="dropdown-pane" id="example-dropdown" data-dropdown>
   Just some junk that needs to be said. Or not. Your choice.
 </div>
 <button type="button" id="search-button">Search</button>
-
+<button type="button" class="button success" id="movieButton">Search Movie Images</button>
 <div class="card" style="width: 250px; height: 300px;">
   <div class="card-divider">
     <h4 id="characterName">Character's Name</h4>
